--- a/notebooks/R/bob_ross.Rmd
+++ b/notebooks/R/bob_ross.Rmd
@@ -21,10 +21,6 @@ When you save the notebook, an HTML file containing the code and output will be 
 The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
 
 ```{r}
-filter(bob_ross, tree == 1 & trees == 0)
-filter(bob_ross, tree == 1 & trees == 1)
-```
-```{r}
 nas <- anyNA(bob_ross)
 nas
 ```
@@ -42,8 +38,20 @@ What is the distribution of features across paintings?
 
 ```{r}
 df <- bob_ross
+Aired<-c("1/11/83","1/11/83","1/18/83","1/25/83","2/1/83","2/8/83","2/15/83","2/22/83","3/1/83","3/8/83","3/15/83","3/22/83","3/29/83","8/31/83","9/7/83","9/14/83","9/21/83","9/28/83","10/5/83","10/12/83","10/19/83","10/26/83","11/2/83","11/9/83","11/16/83","11/23/83","1/4/84","1/11/84","1/18/84","1/25/84","2/1/84","2/8/84","2/15/84","2/22/84","2/29/84","3/7/84","3/14/84","3/21/84","3/28/84","9/5/84","9/12/84","9/19/84","9/26/84","10/3/84","10/10/84","10/17/84","10/24/84","10/31/84","11/7/84","11/14/84","11/21/84","11/28/84","1/2/85","1/9/85","1/16/85","1/23/85","1/30/85","2/6/85","2/13/85","2/20/85","2/27/85","3/6/85","3/13/85","3/20/85","3/27/85","5/1/85","5/8/85","5/15/85","5/22/85","5/29/85","6/5/85","6/12/85","6/19/85","6/26/85","7/2/85","7/9/85","7/16/85","7/23/85","10/2/85","10/9/85","10/16/85","10/23/85","10/30/85","11/6/85","11/13/85","11/20/85","11/27/85","12/4/85","12/11/85","12/18/85","12/25/85","1/2/86","1/9/86","1/16/86","1/23/86","1/30/86","2/6/86","2/13/86","2/20/86","2/27/86","3/6/86","3/13/86","3/20/86","3/27/86","4/30/86","5/7/86","5/14/86","5/21/86","5/28/86","6/4/86","6/11/86","6/18/86","6/25/86","7/2/86","7/9/86","7/16/86","7/23/86","9/3/86","9/10/86","9/17/86","9/24/86","10/1/86","10/8/86","10/15/86","10/22/86","10/29/86","11/5/86","11/12/86","11/19/86","11/26/86","12/30/86","1/7/86","1/14/86","1/21/86","1/28/86","2/4/86","2/11/86","2/18/86","2/25/86","3/4/86","3/11/86","3/18/86","3/25/86","4/29/87","5/6/87","5/13/87","5/20/87","5/27/87","6/3/87","6/10/87","6/17/87","6/24/87","7/1/87","7/8/87","7/15/87","7/22/87","9/2/87","9/9/87","9/16/87","9/23/87","9/30/87","10/7/87","10/14/87","10/21/87","10/28/87","11/4/87","11/11/87","11/18/87","11/25/87","12/30/87","1/6/88","1/13/88","1/20/88","1/27/88","2/3/88","2/10/88","2/17/88","2/24/88","3/2/88","3/9/88","3/16/88","3/23/88","4/27/88","5/4/88","5/11/88","5/18/88","5/25/88","6/1/88","6/8/88","6/15/88","6/22/88","6/29/88","7/6/88","7/13/88","7/20/88","7/17/88","7/24/88","7/31/88","8/7/88","8/14/88","8/21/88","8/28/88","9/4/88","9/11/88","9/18/88","9/25/88","10/2/88","10/9/88","1/4/89","1/11/89","1/18/89","1/25/89","2/1/89","2/8/89","2/15/89","2/22/89","3/1/89","3/8/89","3/15/89","3/22/89","3/29/89","7/5/89","7/12/89","7/19/89","7/26/89","8/2/89","8/9/89","8/16/89","8/23/89","8/30/89","9/6/89","9/13/89","9/20/89","9/27/89","1/3/90","1/10/90","1/17/90","1/24/90","1/31/90","2/7/90","2/14/90","2/21/90","2/28/90","3/7/90","3/14/90","3/21/90","3/28/90","4/4/90","4/11/90","4/18/90","4/25/90","5/2/90","5/9/90","5/16/90","5/23/90","5/30/90","6/6/90","6/13/90","6/20/90","6/27/90","9/5/90","9/12/90","9/19/90","9/26/90","10/3/90","10/10/90","10/17/90","10/24/90","10/31/90","11/7/90","11/14/90","11/21/90","11/28/90","1/1/91","1/8/91","1/15/91","1/22/91","1/29/91","2/5/91","2/12/91","2/19/91","2/26/91","3/5/91","3/12/91","3/19/91","3/26/91","9/3/91","9/10/91","9/17/91","9/24/91","10/1/91","10/8/91","10/15/91","10/22/91","10/29/91","11/5/91","11/12/91","11/19/91","11/26/91","1/7/92","1/14/92","1/21/92","1/28/92","2/4/92","2/11/92","2/18/92","2/25/92","3/3/92","3/10/92","3/17/92","3/24/92","3/31/92","8/25/92","9/1/92","9/8/92","9/15/92","9/22/92","9/29/92","10/6/92","10/13/92","10/20/92","10/27/92","11/3/92","11/10/92","11/17/92","12/1/92","12/8/92","12/15/92","12/22/92","12/29/92","1/5/93","1/12/93","1/19/93","1/26/93","2/2/93","2/9/93","2/16/93","2/23/93","3/2/93","3/9/93","3/16/93","3/23/93","3/30/93","4/6/93","4/13/93","4/20/93","4/27/93","5/4/93","5/11/93","5/18/93","5/20/93","5/25/93","6/1/93","6/8/93","6/15/93","6/22/93","6/29/93","7/6/93","7/13/93","7/20/93","7/27/93","8/3/93","8/10/93","8/17/93","8/24/93","8/31/93","9/7/93","9/14/93","9/21/93","9/28/93","10/5/93","10/12/93","10/19/93","10/26/93","11/2/93","11/9/93","11/16/93","11/23/93","11/30/93","12/7/93","12/14/93","12/21/93","12/28/93","1/4/94","1/11/94","1/18/94","1/25/94","2/1/94","2/8/94","2/15/94","2/22/94","3/1/94","3/8/94","3/15/94","3/22/94","3/29/94","4/5/94","4/12/94","4/19/94","4/26/94","5/3/94","5/10/94","5/17/94")
+
+df %>%
+  pull(title) %>%
+  str_to_title()
+
+df <- cbind(df, Aired)
+View(df)
+```
+
+```{r}
 inc <- c("PURPLE MOUNTAIN RANGE","COUNTRY CHARM","PEACEFUL REFLECTIONS")
 df <- df %>% filter(guest == 0 & !(title %in% inc))
+
 ```
 ```{r}
 # feature frequency with colSum
@@ -79,5 +87,48 @@ feat_df <- select_(df, .dots = top)
 cols <- sapply(feat_df, is.numeric)
 corr <- cor(feat_df[,cols])
 corrplot(corr, method="square",order="AOE",col=colorRampPalette(c("#87007E", "#000000", "#1D70A2"))(200),tl.cex = 0.45, tl.col = "#C60F7B")
+```
+
+```{r}
+sum_feat <- df %>% mutate(feat_sum = rowSums(.[5:71])) %>% arrange(-feat_sum) %>% select(episode, season, episode_num, title, feat_sum)
+head(sum_feat)
+
+season_df <- inner_join(sum_feat, df, by=c("season", "episode_num"))
+```
+
+
+```{r}
+connect_features <- function(x){
+  feat_1 <- c()
+  feat_2 <- c()
+  count <- 1
+  for(i in 1:(nrow(x)-1)){
+    for(j in (i+1):(nrow(x))){
+      feat_1[count] <- (x[i,2])
+      feat_2[count] <- (x[j,2])
+      count <- count+1
+    }
+  }
+  res <- data.frame("feature1" = feat_1, "feature2" = feat_2)
+  return(res)
+}
+
+temp <- data.frame("feature1" = character(), "feature2" = character())
+for(i in 1:length(df$title)){
+  current <- data.frame(df[i,5:71])
+  x <- data.frame(t(current))
+  colnames(x) <- "number"
+  features <- rownames(x)
+  rownames(x) <- 1:nrow(x)
+  x$features <- features
+  xpos <- x %>% filter(number > 0)
+  res <- connect_features(xpos)
+  temp <- rbind(temp, res)
+}
+
+weights <- count(temp, vars = c("feature1", "feature2"))
+colnames(weights)[3] <- "weight"
+
+View(weights)
 ```
 
